// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans 1`] = `1000`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans 2`] = `
Object {
  "formula": "( 1/10 * Sref * 5 )",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 5,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans, licenciement eco, OPE 1`] = `1000`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 51ans, licenciement eco, OPE 2`] = `
Object {
  "formula": "( 1/10 * Sref * 5 )",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 5,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 55ans 1`] = `1000`;

exports[`getIndemnite 2k, 5ans d'ancienneté, 55ans 2`] = `
Object {
  "formula": "( 1/10 * Sref * 5 )",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 5,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté 1`] = `0`;

exports[`getIndemnite 2k, 12mois d'ancienneté 2`] = `
Object {
  "formula": "",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 1,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 12mois d'ancienneté, OPE + licenciement eco 1`] = `0`;

exports[`getIndemnite 2k, 12mois d'ancienneté, OPE + licenciement eco 2`] = `
Object {
  "formula": "",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 1,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 30mois d'ancienneté 1`] = `500`;

exports[`getIndemnite 2k, 30mois d'ancienneté 2`] = `
Object {
  "formula": "( 1/10 * Sref * 2.5 )",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 0,
    "Ancienneté au delà de 10ans (A3)": 0,
    "Ancienneté entre 2 et 5ans (A1)": 2.5,
    "Salaire de référence (Sref)": 2000,
  },
}
`;

exports[`getIndemnite 2k, 41ans d'ancienneté, 55ans 1`] = `23733.33`;

exports[`getIndemnite 2k, 41ans d'ancienneté, 55ans 2`] = `
Object {
  "formula": "( 1/5 * Sref * 31 ) + ( 1/6 * Sref * 5 ) + ( 1/10 * Sref * 5 )",
  "labels": Object {
    "Ancienneté 6 ens 10ans (A2)": 5,
    "Ancienneté au delà de 10ans (A3)": 31,
    "Ancienneté entre 2 et 5ans (A1)": 5,
    "Salaire de référence (Sref)": 2000,
  },
}
`;
